--- a/accounts/templates/company_register.html
+++ b/accounts/templates/company_register.html
@@ -85,6 +85,11 @@
                     <div class="col-md-6 col-sm-12">{{ form.website|as_crispy_field }}</div>
                 </div>
                 <div class="row">
+                    <div class="col-md-4 col-sm-12">{{ form.facebook|as_crispy_field }}</div>
+                    <div class="col-md-4 col-sm-12">{{ form.twitter|as_crispy_field }}</div>
+                    <div class="col-md-4 col-sm-12">{{ form.linkedin|as_crispy_field }}</div>
+                </div>
+                <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <button type="submit" class="btn btn-primary text-white mt-3" style="width:250px; font-weight:450; font-size:15px; background-color:#29569F">Register</button>
                     </div>
