--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -56,13 +56,13 @@
                     <img src="{% static 'images/mining-workers.jpg' %}" height="580" width="260" class="d-block w-100 hero-images" alt="Afrobarometer">
                     </div>
                     <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
-                    <img src="{% static 'images/farming.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
+                    <img src="{% static 'images/farming.JPG' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
                     </div>
                     <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
-                    <img src="{% static 'images/engineering.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
+                    <img src="{% static 'images/engineering.JPG' %}" height="550" width="260" class="d-block w-100 hero-images" alt="...">
                     </div>
                     <div class="carousel-item" style="margin-bottom: 30px; margin-top: 30px;">
-                    <img src="{% static 'images/workers.jpg' %}" height="550" width="260" class="d-block w-100 hero-images" alt="USAid">
+                    <img src="{% static 'images/workers.JPG' %}" height="550" width="260" class="d-block w-100 hero-images" alt="USAid">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
